buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE")
        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.0"
    }
}

repositories {
    mavenCentral()
}

apply plugin: 'java'                                // plugin for java
apply plugin: 'org.springframework.boot'
apply plugin: "io.spring.dependency-management"
apply plugin: "org.sonarqube"

jar {
  baseName = 'ms-gestionusuarios-mda'
  version =  '1.0'
}

group = 'mx.com.nmp.usuarios'
version = '1.0.0'
sourceCompatibility = '1.8'

ext {
	springCloudVersion = '2.2.3.RELEASE'
}

dependencies {
	compile "org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE"
	compile "org.springframework.boot:spring-boot-starter-tomcat:2.1.3.RELEASE"
	compile "io.springfox:springfox-swagger2:2.8.0"
	compile "io.springfox:springfox-swagger-ui:2.8.0"
	compile "com.github.joschi.jackson:jackson-datatype-threetenbp:2.6.4"
	compile "javax.validation:validation-api:2.0.1.Final"
	//compile "org.springframework.boot:spring-boot-starter-data-mongodb:2.1.3.RELEASE"
	compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
	compile "commons-collections:commons-collections:3.2.2"
	compile "javax.ws.rs:javax.ws.rs-api:2.1.1"
	compile "com.mashape.unirest:unirest-java:1.4.9"
	compile "com.google.code.gson:gson:2.8.5"	
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.1.3.RELEASE'
	compile group: 'io.micrometer', name: 'micrometer-core', version: '1.5.1'
	compile group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.5.1'
	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '2.1.3.RELEASE'	
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
	compile group: 'com.google.guava', name: 'guava', version: '23.6.1-jre'
	testCompile "org.springframework.boot:spring-boot-starter-test:2.1.3.RELEASE"
}

dependencyManagement {
     imports {
          mavenBom "org.springframework.cloud:spring-cloud-sleuth:${springCloudVersion}"
     }
}

sonarqube {
    properties {
        property "sonar.projectName", "ms-gestionusuarios-mda"
    	property "sonar.projectKey", "org.sonarqube:java-gradle-simple"
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
